...
                guard let self else { return }
                self.questionNumber = 0
                self.correctAnswers = 0
                self.questionFactory?.requestNextQuestion()
            }
        )
        alertPresenter?.showAlert(alertData: quizResult, id: "resultAlert")
    }

    // MARK: - QuestionFactoryDelegate
    func didRecieveNextQuestion(question: QuizQuestion?) {
        guard let question else { return }
        delegate?.isLoading(true)
...
